# smartscreen

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  hil-regression.yml  release.yml
apps/desktop/smartscreen_app/: __init__.py  __main__.py  app.py  cli.py
apps/desktop/smartscreen_app/qml/: Main.qml  OnboardingWizard.qml
docs/: SELF_HOSTED_RUNNER.md
installers/bootstrap/: SmartScreen Installer.bat  install-smartscreen-ui.command  install-smartscreen-ui.ps1  install-smartscreen-ui.sh  install-smartscreen.ps1  install-smartscreen.sh
installers/bootstrap/smartscreen_bootstrap/: __init__.py  cli.py  gui.py  resolver.py  service.py
installers/linux/: SETUP_GPG.md  build_linux.sh  configure_gpg_signing.sh
installers/macos/: build_macos.sh
installers/windows/: build_windows.ps1  smartscreen.iss
tests/: test_bootstrap_gui_entry_import.py  test_bootstrap_service_tls.py  test_desktop_main_entry.py
tests/integration/: test_bootstrap_resolution.py
tests/transcripts/: rev_a_handshake_frame.jsonl
tests/unit/: test_bootstrap_resolver.py  test_bootstrap_service.py  test_cli.py  test_config.py  test_diagnostics.py  test_dirty_rects.py  test_performance.py  test_protocol_states.py  test_replay.py  test_rev_a_protocol.py  test_rgb565.py  test_telemetry_provider.py  test_updates.py
